--- a/index.html
+++ b/index.html
@@ -2,5 +2,8 @@
 <head>
 <meta charset="utf-8">
 <title>Dumbvoid Crash Counter</title>
+  <img src="docs/assets/images/Header.png"
+       alt="Header"
+       class="Header">
 </head>
 </html>
