--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title>Dumbvoid Crash Counter</title>
   <img src="docs/assets/images/Header.png"
        alt="Header"
-       class="Header">
+       class="HeadPic">
 </head>
 </html>
