testing index.html

--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
   <img src="docs/assets/images/Header.png"
        alt="Header"
        class="HeadPic">
+  <style>
+        img.HeadPic {
+            margin-top:75px;
+            display: block;
+            margin-left:auto;
+            margin-right:auto;
+        }
+    </style>
 </head>
 </html>
