--- a/index.html
+++ b/index.html
@@ -13,5 +13,18 @@
             margin-right:auto;
         }
     </style>
+  <!--OH PRAISE THE LORD THANK YA JESUS-->
+  <hr class="hr1">
+    <style>
+        .hr1 {
+            display: block;
+            height: 1px;
+            border: 0;
+            border-top: 5px solid #073900;
+        }
+    </style>
 </head>
+<body background="docs/assets/images/BackgroundTile.jpg">
+  
+</body>
 </html>
