--- a/index.html
+++ b/index.html
@@ -25,6 +25,71 @@
     </style>
 </head>
 <body background="docs/assets/images/BackgroundTile.jpg">
-  
+
+  <img src="docs/assets/images/CurrentCount.png"
+         alt="Count"
+         class="CURCOU">
+  <img src="docs/assets/images/7.png"
+         alt="CrashNum"
+         class="CrashNum">
+   <!--I REALLY did not wanna do it this way but oh well-->
+  <img src="docs/assets/images/accurate.png"
+         alt="notaccurate100%"
+         class="ACC">
+  <img src="docs/assets/images/ResetCounter.png"
+         alt="ResetCounter"
+         class="RTC">
+  <img src="docs/assets/images/2.png"
+         alt="ResetNum"
+         class="ResetNum">
+  <img src="docs/assets/images/MadeBy.png"
+         alt="madeby"
+         class="MadeBy">
+  <style>
+        img.CURCOU {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top:150px;
+        }
+        img.RTC {
+            display:block;
+            margin-left: auto;
+            margin-right:auto;
+            margin-top:200px;
+        }
+        img.CrashNum {
+            display: block;
+            wdith:auto;
+            height:200px;
+            margin-left: auto;
+            margin-right:auto;
+            margin-top:50px;
+        }
+        img.ResetNum {
+            display: block;
+            margin-left:auto;
+            margin-right:auto;
+            margin-top:50px;
+            wdith:auto;
+            height:200px;
+        }
+        img.MadeBy {
+            display:block;
+            margin-top:100px;
+            margin-left:auto;
+            margin-right:auto;
+            padding-bottom:50px;
+        }
+        img.ACC {
+            display: block;
+            margin-left:auto;
+            margin-right:auto;
+            height: auto;
+            width: 600px;
+            margin-top: 50px;
+        }
+    </style>
 </body>
+  
 </html>
